Fix word breaking on mobile

--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -977,8 +977,8 @@ article {
     @include respond-below(sm) {
       font-size: 1rem;
       hyphens: auto;
-      -ms-word-break: break-all;
-      word-break: break-all;
+      -ms-word-break: break-word;
+      word-break: break-word;
       // word-break: break-word;
       -webkit-hyphens: auto;
       -moz-hyphens: auto;
